--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title># Intermediate Machine Learning with scikit-learn: Cross validation, Parameter Tuning, Pandas Interoperability, and Missing Values</title>
+  <title># Intermediate Machine Learning with scikit-learn: Evaluation, Calibration, and Inspection</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./assets/style.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-  <textarea id="source">title: # Intermediate Machine Learning with scikit-learn: Cross validation, Parameter Tuning, Pandas Interoperability, and Missing Values
+  <textarea id="source">title: # Intermediate Machine Learning with scikit-learn: Evaluation, Calibration, and Inspection
 use_katex: True
 class: title-slide
 
 # Intermediate Machine Learning with scikit-learn
-## Cross validation, Parameter Tuning, Pandas Interoperability, and Missing Values
+## Evaluation, Calibration, and Inspection
 
 ![](images/scikit-learn-logo-notext.png)
 
