ENH Adds api intro

--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@ class: middle, larger
 
 ---
 
+# Scikit-learn API
+
+.center[
+## `estimator.fit(X, [y])`
+]
+
+.g[
+.g-6[
+## `estimator.predict`
+- Classification
+- Regression
+- Clustering
+]
+.g-6[
+## `estimator.transform`
+- Preprocessing
+- Dimensionality reduction
+- Feature selection
+- Feature extraction
+]
+]
+
+---
+
+# Data Representation
+
+![:scale 80%](images/data-representation.svg)
+
+---
+
+# Supervised ML Workflow
+
+![:scale 100%](images/ml-workflow-sklearn.svg)
+
+---
+
 name: evaluation
 class: chapter-slide
 
