ENH Update slides and notebooks

--- a/index.html
+++ b/index.html
@@ -439,8 +439,7 @@ $$
 
 ```py
 from sklearn.metrics import RocCurveDisplay
-RocCurveDisplay.from_estimator(
-    log_reg, X_test, y_test, name="LogisticRegression")
+RocCurveDisplay.from_estimator(log_reg, X_test, y_test, name="LogisticRegression")
 ```
 
 .g[
@@ -939,8 +938,7 @@ model.predict(X_train_2).mean()
 ```py
 from sklearn.inspection import PartialDependenceDisplay
 
-PartialDependenceDisplay.from_estimator(
-    estimator, X, features)
+PartialDependenceDisplay.from_estimator(estimator, X, features)
 ```
 
 ![:scale 65%](notebooks/images/partial_dependence_multiple.png)
