DOC Fix typo in slides

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ from sklearn.metrics import ConfusionMatrixDisplay
 
 # Scikit-learn defaults to accuracy
 
-### Data with 90% True Negatives
+### Data with 90% Accuracy
 
 ![:scale 100%](notebooks/images/confusion_matrix_90_neg.png)
 
